# mzx

./: .coverage  .gitignore  .tool-versions  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
docs/: conf.py  index.rst  installation.rst  mmconvert.rst  modules.rst  mzx.rst  usage.rst
src/: mm_convert.py
src/mmconvert/: __init__.py  cli.py  gui.py
src/mmconvert.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mzx/: __init__.py  __main__.py  cli.py  docker.py  gui.py  types.py  vendor.py
src/tests/: test_waters_format_scan_headers.py
tests/: test_chromatograms.py  test_cli.py  test_convert_raw_file.py  test_docker.py  test_exclusion_and_format.py  test_main_module.py  test_msconvert.py  test_process_waters_file.py  test_run_cmd.py  test_vendor.py  test_waters_convert.py  test_waters_format_scan_headers.py
