[project]
maintainers = [
  { name = "Herman Singh", email = "herman@massmatrix.bio" },
  { name = "MassMatrix", email = "eng@massmatrix.bio" },
]
authors = [{ name = "Michael Freitas", email = "mike@massmatrix.bio" }]
name = "mmconvert"
description = "Easy to use Mass Spec conversion utility"
readme = "README.rst"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: File Formats",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Software Development",
]
keywords = ["mass spectrometry", "conversion", "bioinformatics"]
requires-python = ">=3.8"
dependencies = [
  "loguru>=0.5.0",
  "lxml>=4.6.0",
  "matplotlib>=3.0",
  "numpy>=1.21",
  "pyteomics>=4.0",
  "pyside6>=6.0",
]
dynamic = ["version"]

[project.scripts]
mmconvert = "mmconvert.cli:main"
mmconvert-gui = "mmconvert.gui:main"

[project.urls]
Documentation = "https://readthedocs.org/projects/mmconvert"
"Source Code" = "https://github.com/mass-matrix/mm_convert"
"Issue Tracker" = "https://github.com/mass-matrix/mm_convert/issues"


[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = true

[tool.setuptools.dynamic]
version = { attr = "mmconvert.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]
addopts = "--tb=short -v"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.paths]
source = ["src"]
